test/parsing/errors/sparse-subdomain-zeroargs.chpl
var x: [0..1] sparse subdomain();
