test/parsing/errors/sparse-subdomain-zeroargs.good
sparse-subdomain-zeroargs.chpl:1: error: the 'sparse subdomain' expression expects exactly one argument (the parent domain)
